[gd_scene load_steps=14 format=3 uid="uid://cwkwh83bln4lf"]

[ext_resource type="Script" path="res://scripts/Bullet.gd" id="1_r6d37"]
[ext_resource type="Texture2D" uid="uid://kv2utpay2l56" path="res://assets/Player/Bullet/001.png" id="2_ysx54"]
[ext_resource type="Texture2D" uid="uid://beiwen8yrs57c" path="res://assets/Player/Bullet/002.png" id="3_wi6qc"]
[ext_resource type="Texture2D" uid="uid://ci6w8m4d6fbhc" path="res://assets/Player/Bullet/003.png" id="4_a7cnf"]
[ext_resource type="Texture2D" uid="uid://d3qmnjks8lafx" path="res://assets/Player/Bullet/004.png" id="5_d6mpa"]
[ext_resource type="Texture2D" uid="uid://c3ahv2k35c5qr" path="res://assets/Player/Bullet/005.png" id="6_evtct"]
[ext_resource type="Texture2D" uid="uid://dfbiol2trawyd" path="res://assets/Player/Bullet/006.png" id="7_wenc2"]
[ext_resource type="Texture2D" uid="uid://cwuubde8cwndp" path="res://assets/Player/Bullet/007.png" id="8_bx83e"]
[ext_resource type="Texture2D" uid="uid://c38ce6x4yprdj" path="res://assets/Player/Bullet/008.png" id="9_wa76o"]
[ext_resource type="Texture2D" uid="uid://dxlm7pb2di7go" path="res://assets/Player/Bullet/009.png" id="10_vwgbt"]
[ext_resource type="Texture2D" uid="uid://b8lawis53vynt" path="res://assets/Player/Bullet/010.png" id="11_tvpjt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1j86r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ysx54")
}, {
"duration": 1.0,
"texture": ExtResource("3_wi6qc")
}, {
"duration": 1.0,
"texture": ExtResource("4_a7cnf")
}, {
"duration": 1.0,
"texture": ExtResource("5_d6mpa")
}, {
"duration": 1.0,
"texture": ExtResource("6_evtct")
}, {
"duration": 1.0,
"texture": ExtResource("7_wenc2")
}, {
"duration": 1.0,
"texture": ExtResource("8_bx83e")
}, {
"duration": 1.0,
"texture": ExtResource("9_wa76o")
}, {
"duration": 1.0,
"texture": ExtResource("10_vwgbt")
}, {
"duration": 1.0,
"texture": ExtResource("11_tvpjt")
}],
"loop": true,
"name": &"fire",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ochc1"]
radius = 4.0

[node name="Bullet" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 64
collision_mask = 64
script = ExtResource("1_r6d37")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-6.55651e-07, 9.53674e-07)
scale = Vector2(0.3125, 0.3125)
sprite_frames = SubResource("SpriteFrames_1j86r")
animation = &"fire"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_ochc1")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(5, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_ochc1")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
